@@ -1,3 +1,10 @@
 2017-01-06 Joe Flood <Joseph.Flood@indympo.org>
 
 	*Initial commit
+
+
+2017-04-05 Joe Flood <Joseph.Flood@indympo.org>
+
+	*ConvertGeography/ConvertGeography.py: Made changes to better handle numeric polygon labels
+
+	*ConvertGeography/GetAreaConversionMatrix.py: Added "from __future__ import division"
